<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffecf6"
    android:gravity="center"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    tools:context=".Activity.SignInActivity">

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_txt"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:autofillHints="phone"
        android:background="@drawable/edt_bg"
        android:drawableStart="@drawable/call_icon"
        android:drawablePadding="10dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:background="@drawable/edt_bg"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/forgotepass_txt"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dark_colour_btn_bg"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/or_continue_with"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:drawableStart="@drawable/facebook_icon"
            android:layout_marginRight="10dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:drawableStart="@drawable/google_icon"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/dont_have_accout_register"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>