<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="#ffecf6"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        tools:context=".Activity.SignUpActivity">

        <TextView
            android:id="@+id/txtCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:autofillHints="name"
            android:background="@drawable/edt_bg"
            android:drawableStart="@drawable/username_icon"
            android:drawablePadding="10dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="name"
            android:background="@drawable/edt_bg"
            android:drawableStart="@drawable/username_icon"
            android:drawablePadding="10dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"/>

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_bg"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/username_icon" />

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:buttonTint="@color/black"
                android:text="@string/male"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:buttonTint="@color/black"
                android:text="@string/female"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edt_bg"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edtMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="phone"
            android:background="@drawable/edt_bg"
            android:drawableStart="@drawable/call_icon"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:background="@drawable/edt_bg"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"/>

        <CheckBox
            android:id="@+id/chkAcceptTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/black"
            android:text="@string/chkbox_accept_terms"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/dark_colour_btn_bg"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRegisterWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/or_register_with"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:drawableStart="@drawable/facebook_icon"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:text="@string/facebook"
                android:textAlignment="gravity"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:drawableStart="@drawable/google_icon"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/already_account_login"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>