<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:theme="@style/Theme.MaterialComponents.Light"
    android:layout_marginTop="15dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:background="#ffecf6"
        android:paddingTop="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/showImgCategoryItem"
            android:layout_marginLeft="10dp"
            android:src="@drawable/category_item_img"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtShowNameCategoryItem"
                android:text="@string/itemname"
                android:textSize="25dp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtShowPriceCategoryItem"
                android:layout_marginTop="5dp"
                android:text="@string/itemprice"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtShowDescriptionCategoryItem"
                android:layout_marginTop="5dp"
                android:text="@string/itemdesc"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>