<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:theme="@style/Theme.MaterialComponents.Light"
    android:layout_marginTop="15dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="#ffecf6"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:background="#ffecf6"
            android:paddingTop="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/showImgWishlist"
                android:layout_gravity="center"
                android:src="@drawable/category_item_img"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtShowNameWishlist"
                    android:text="@string/itemname"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtShowPriceWishlist"
                    android:layout_marginTop="5dp"
                    android:text="@string/itemprice"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtShowDescriptionWishlist"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/itemdesc"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShowAddtocartWishlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dark_colour_btn_bg"
                android:drawableStart="@drawable/addtocart_icon"
                android:layout_marginRight="10dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:text="@string/addtocart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShowRemoveWishlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/dark_colour_btn_bg"
                android:drawableStart="@drawable/addtocart_icon"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:text="@string/removefromwishlist"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>