<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffecf6"
    tools:context=".Activity.ShowItemInFullScreenActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFullScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A8757F"/>

    <ScrollView
        android:id="@+id/scrollviewFullScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/toolbarFullScreen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/cancel_icon"
                android:id="@+id/btnCancleFullScreen"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.github.chrisbanes.photoview.PhotoView
                    android:id="@+id/imageViewFullScreen"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/category_item_img"
                    tools:ignore="MissingClass" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtItemNameFullScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/itemname"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtItemPriceFullScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="3dp"
                    android:text="@string/rupee_symbol"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    android:textSize="25dp"
                    android:textStyle="italic" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtItemDescFullScreen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:text="@string/itemdesc"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    android:textSize="25dp" />


            </LinearLayout>

        </RelativeLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="#ffecf6"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWishlistFullScreen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:layout_weight="1"
            android:background="@drawable/dark_colour_btn_bg"
            android:drawableStart="@drawable/wishlist_icon"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:text="@string/wishlist"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddtocartFullScreen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:layout_weight="1"
            android:background="@drawable/dark_colour_btn_bg"
            android:drawableStart="@drawable/addtocart_icon"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:text="@string/addtocart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>